@@ -12,16 +12,21 @@
     <url>https://stevecrox.github.io/maven-parent/</url>
     <inceptionYear>2022</inceptionYear>
 
+    <ciManagement>
+        <system>GitHub</system>
+        <url>https://github.com/${github_organisation}/${github_repository_name}/actions</url>
+    </ciManagement>
+
     <scm>
-        <connection>scm:git:https://github.com/stevecrox/maven-parent.git</connection>
-        <developerConnection>scm:git:https://github.com/stevecrox/maven-parent.git</developerConnection>
-        <url>https://github.com/stevecrox/maven-parent</url>
-        <tag>HEAD</tag>
+        <connection>scm:git:https://github.com/${github_organisation}/${github_repository_name}.git</connection>
+        <developerConnection>scm:git:https://github.com/${github_organisation}/${github_repository_name}.git</developerConnection>
+        <url>https://github.com/${github_organisation}/${github_repository_name}</url>
+        <tag>v0.0.1</tag>
     </scm>
 
     <issueManagement>
         <system>GitHub</system>
-        <url>https://github.com/stevecrox/maven-parent/issues</url>
+        <url>https://github.com/${github_organisation}/${github_repository_name}/issues</url>
     </issueManagement>
 
     <distributionManagement>
@@ -55,57 +60,78 @@
     </licenses>
 
     <properties>
-        <!-- Compiler settings, lets you tweak what JDK you are using as needed. -->
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <!-- Name of the projects to use as part of the site description. -->
+        <github_repository_name>maven-parent</github_repository_name>
+        <github_organisation>stevecrox</github_organisation>
+
+        <!-- Project documentation. -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.build.targetEncoding>ISO-8859-1</project.build.targetEncoding>
-        <!-- Added so CI's like Jenkins can scan the console for warnings. -->
+
+        <!-- Compiler settings, lets you tweak what JDK you are using as needed. -->
+        <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.failOnError>true</maven.compiler.failOnError>
+        <maven.compiler.failOnWarning>false</maven.compiler.failOnWarning>
         <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
         <maven.compiler.showWarnings>true</maven.compiler.showWarnings>
-
-        <!-- Maven Source Plugin Settings. -->
-        <maven.source.attach>true</maven.source.attach>
-        <maven.source.includePom>true</maven.source.includePom>
 
         <!-- Used to get the Site files into the right structure, while also being readable in an SCM. -->
         <project.docs.directory>docs</project.docs.directory>
         <project.build.interim.site.directory>${project.build.directory}/docs-site</project.build.interim.site.directory>
+        <uk.pallas.systems.site.version>0.0.3</uk.pallas.systems.site.version>
         <!-- Used to publish the maven site. -->
         <scmpublish.scm.branch>gh-pages</scmpublish.scm.branch>
-        <scmpublish.pubScmUrl>${scm.connection}</scmpublish.pubScmUrl>
-        <scmpublish.content>${project.build.directory}/staging/</scmpublish.content>
+        <scmpublish.pubScmUrl>${project.scm.connection}</scmpublish.pubScmUrl>
+        <scmpublish.content>${project.build.directory}/staging</scmpublish.content>
+        <!-- GitHub Changelog Parameters -->
+        <displayFileRevDetailUrl>${project.scm.url}/tree/master/%FILE%</displayFileRevDetailUrl>
+        <displayChangeSetDetailUrl>${project.scm.url}/commit</displayChangeSetDetailUrl>
+
         <!-- Apache Maven Build Plugin Versions. -->
-        <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
-        <maven-resources-plugin.version>3.2.0</maven-resources-plugin.version>
+        <maven-resources-plugin.version>3.3.0</maven-resources-plugin.version>
+        <maven-dependency-plugin.version>3.4.0</maven-dependency-plugin.version>
+        <maven-deploy-plugin.version>3.0.0</maven-deploy-plugin.version>
+        <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
+
         <!-- Apache Maven Test Plugin Versions. -->
         <jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
-        <maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
-        <maven-failsafe-plugin.version>2.22.0</maven-failsafe-plugin.version>
+        <maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
+        <maven-failsafe-plugin.version>3.0.0-M7</maven-failsafe-plugin.version>
+        <!-- Jacoco Settings. -->
+        <argLine />
+
         <!-- Apache Maven Release Plugin Versions. -->
         <checksum-maven-plugin.version>1.11</checksum-maven-plugin.version>
         <maven-gpg-plugin.version>3.0.1</maven-gpg-plugin.version>
-        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
+        <maven-release-plugin.version>3.0.0-M7</maven-release-plugin.version>
         <releaseVersion />
+
         <!-- Apache Maven Reporting Plugin Versions. -->
-        <maven-site-plugin.version>3.12.0</maven-site-plugin.version>
-        <maven-project-info-reports-plugin.version>3.3.0</maven-project-info-reports-plugin.version>
+        <maven-site-plugin.version>4.0.0-M4</maven-site-plugin.version>
+        <maven-project-info-reports-plugin.version>3.4.1</maven-project-info-reports-plugin.version>
         <maven-scm-publish-plugin.version>3.1.0</maven-scm-publish-plugin.version>
         <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
         <maven-changelog-plugin.version>2.3</maven-changelog-plugin.version>
         <maven-javadoc-plugin.version>3.4.0</maven-javadoc-plugin.version>
-        <maven-jxr-plugin.version>3.2.0</maven-jxr-plugin.version>
-        <maven-surefire-report-plugin.version>2.22.0</maven-surefire-report-plugin.version>
+        <maven-jxr-plugin.version>3.3.0</maven-jxr-plugin.version>
+        <maven-surefire-report-plugin.version>3.0.0-M7</maven-surefire-report-plugin.version>
         <taglist-maven-plugin.version>3.0.0</taglist-maven-plugin.version>
-        <!-- GitHub Changelog Parameters -->
-        <displayFileRevDetailUrl>${project.scm.url}/tree/master/%FILE%</displayFileRevDetailUrl>
-        <displayChangeSetDetailUrl>${project.scm.url}/commit</displayChangeSetDetailUrl>
+        <maven-pmd-plugin.version>3.19.0</maven-pmd-plugin.version>
+        <sonar-maven-plugin.version>5.1</sonar-maven-plugin.version>
+
+        <!-- Spotbugs specific configuration. -->
+        <spotbugs-maven-plugin.version>4.7.3.0</spotbugs-maven-plugin.version>
+        <spotbugs.xmlOutput>true</spotbugs.xmlOutput>
+        <spotbugs.effort>Max</spotbugs.effort>
+        <spotbugs.skipEmptyReport>true</spotbugs.skipEmptyReport>
+        <spotbugs.threshold>Low</spotbugs.threshold>
     </properties>
 
     <build>
         <pluginManagement>
             <plugins>
-                <!-- Apache Maven Build Plugin Definitions. -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
@@ -119,6 +145,8 @@
                         </excludes>
                     </configuration>
                 </plugin>
+
+                <!-- Apache Maven Build Plugin Versions. -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-resources-plugin</artifactId>
@@ -126,57 +154,77 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-source-plugin</artifactId>
-                    <version>${maven-source-plugin.version}</version>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>${maven-dependency-plugin.version}</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>${maven-javadoc-plugin.version}</version>
-                    <configuration>
-                        <serialwarn>true</serialwarn>
-                    </configuration>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                    <version>${maven-deploy-plugin.version}</version>
                 </plugin>
-                <!-- Apache Maven Test Plugin Definitions. -->
                 <plugin>
-                    <groupId>org.jacoco</groupId>
-                    <artifactId>jacoco-maven-plugin</artifactId>
-                    <version>${jacoco-maven-plugin.version}</version>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>${maven-jar-plugin.version}</version>
+                    <configuration>
+                        <skipIfEmpty>true</skipIfEmpty>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>test-jar</goal>
+                            </goals>
+                        </execution>
+                    </executions>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-source-plugin</artifactId>
+                    <version>${maven-source-plugin.version}</version>
+                </plugin>
+
+                <!-- Apache Maven Test Plugin Versions. -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
                     <configuration>
-                        <excludes>
-                            <exclude>**/*Integration*</exclude>
-                            <exclude>**/IT*</exclude>
-                            <exclude>**/*IT</exclude>
-                        </excludes>
-                        <includes>
-                            <include>**/*Test*</include>
-                            <include>**/*Test*</include>
-                        </includes>
-                        <reuseForks>false</reuseForks>
+                        <argLine>@{argLine} --illegal-access=permit</argLine>
+                        <parallel>methods</parallel>
+                        <threadCount>10</threadCount>
                     </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-failsafe-plugin</artifactId>
-                    <version>${maven-surefire-plugin.version}</version>
+                    <version>${maven-failsafe-plugin.version}</version>
                     <configuration>
-                        <excludes>
-                            <exclude>**/*Test*</exclude>
-                            <exclude>**/*Test*</exclude>
-                        </excludes>
-                        <includes>
-                            <include>**/*Integration*</include>
-                            <include>**/IT*</include>
-                            <include>**/*IT</include>
-                        </includes>
-                        <reuseForks>false</reuseForks>
+                        <argLine>@{argLine} --illegal-access=permit</argLine>
+                        <parallel>suites</parallel>
+                        <threadCount>1</threadCount>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>org.jacoco</groupId>
+                    <artifactId>jacoco-maven-plugin</artifactId>
+                    <version>${jacoco-maven-plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <id>jacoco-initialize</id>
+                            <goals>
+                                <goal>prepare-agent</goal>
+                            </goals>
+                        </execution>
+                        <execution>
+                            <id>jacoco-site</id>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>report</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+
                 <!-- Apache Maven Release Plugin Definitions. -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -212,6 +260,7 @@
                         <tagNameFormat>v${releaseVersion}</tagNameFormat>
                     </configuration>
                 </plugin>
+
                 <!-- Apache Maven Reporting Plugin Definitions. -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -228,6 +277,7 @@
                             <goals>
                                 <goal>attach-descriptor</goal>
                             </goals>
+                            <phase>post-integration-test</phase>
                         </execution>
                     </executions>
                 </plugin>
@@ -240,6 +290,7 @@
                         <serverId>site</serverId>
                     </configuration>
                 </plugin>
+
                 <!-- Maven Reporting Plugin. -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -286,12 +337,40 @@
                         <outputEncoding>${project.build.targetEncoding}</outputEncoding>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>com.github.spotbugs</groupId>
+                    <artifactId>spotbugs-maven-plugin</artifactId>
+                    <version>${spotbugs-maven-plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-pmd-plugin</artifactId>
+                    <version>${maven-pmd-plugin.version}</version>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
 
     <reporting>
         <plugins>
+            <plugin>
+                <groupId>com.github.spotbugs</groupId>
+                <artifactId>spotbugs-maven-plugin</artifactId>
+                <version>${spotbugs-maven-plugin.version}</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-pmd-plugin</artifactId>
+                <version>${maven-pmd-plugin.version}</version>
+                <configuration>
+                    <minimumPriority>10</minimumPriority>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${jacoco-maven-plugin.version}</version>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-project-info-reports-plugin</artifactId>
@@ -447,6 +526,31 @@
                                         </resource>
                                     </resources>
                                     <outputDirectory>${project.build.interim.site.directory}</outputDirectory>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>unpack-site-resources</id>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>unpack</goal>
+                                </goals>
+                                <configuration>
+                                    <artifactItems>
+                                        <artifactItem>
+                                            <groupId>uk.pallas.systems.site</groupId>
+                                            <artifactId>resources</artifactId>
+                                            <version>${uk.pallas.systems.site.version}</version>
+                                            <type>jar</type>
+                                            <overWrite>true</overWrite>
+                                            <outputDirectory>${project.build.interim.site.directory}/resources/</outputDirectory>
+                                        </artifactItem>
+                                    </artifactItems>
                                 </configuration>
                             </execution>
                         </executions>
